sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:9: error: not found: value to
		for(i<-to getNombreValeurs()-1-j to 1 ){
                       ^AlgCocktailSort1:9: error: value - is not a member of Unit
		for(i<-to getNombreValeurs()-1-j to 1 ){
                                            ^